--- a/main.html
+++ b/main.html
@@ -3,11 +3,17 @@
 <html>
 
 <head>
+	<title>Circle Layout</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <div class="container">
+        <div class="circle circle1"></div>
+        <div class="circle circle2"></div>
+        <div class="circle circle3"></div>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
