--- a/main.html
+++ b/main.html
@@ -10,10 +10,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 	 <div class="container">
-        <div class="circle circle1"></div>
-        <div class="circle circle2"></div>
-        <div class="circle circle3"></div>
-    </div>
+    <div class="red"></div>
+    <div class="green"></div>
+    <div class="yellow"></div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
